--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -11,15 +11,23 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
         include:
-          - os: ubuntu-latest
+          - build_name: linux-arm64-musl
+            os: ubuntu-latest
+            exe_suffix: ""
+            name_suffix: ""
+            target: aarch64-unknown-linux-musl
+          - build_name: linux-x64-musl
+            os: ubuntu-latest
             exe_suffix: ""
             name_suffix: ""
             target: x86_64-unknown-linux-musl
-          - os: macos-latest
+          - build_name: macos-arm64
+            os: macos-latest
             exe_suffix: ""
             name_suffix: ".arm"
             target: aarch64-apple-darwin
-          - os: windows-latest
+          - build_name: windows-x64-msvc
+            os: windows-latest
             exe_suffix: ".exe"
             name_suffix: ".exe"
             target: x86_64-pc-windows-msvc
@@ -39,7 +47,7 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           asset_path: target/${{ matrix.target }}/release/dotter${{ matrix.exe_suffix }}
-          asset_name: dotter${{ matrix.name_suffix }}
+          asset_name: dotter-${{ matrix.build_name}}${{ matrix.name_suffix }}
           asset_content_type: application/octet-stream
           upload_url: ${{ github.event.release.upload_url }}
   build-completions:
