--- a/.github/workflows/build-for-release.yml
+++ b/.github/workflows/build-for-release.yml
@@ -34,14 +34,18 @@ jobs:
             target: x86_64-pc-windows-msvc
     steps:
       - uses: actions/checkout@v3
-      - name: Update rust
-        run: rustup update
-      - name: Add target
-        run: rustup target add ${{ matrix.target }}
-      - name: Cache dependencies
-        uses: Swatinem/rust-cache@v2
+      - name: Install Rust toolchain
+        uses: actions-rs/toolchain@v1
+        with:
+          toolchain: stable
+          target: ${{ matrix.target }}
+          override: true
       - name: Build
-        run: "cargo build --release --locked --verbose --target ${{ matrix.target }}"
+        uses: actions-rs/cargo@v1
+        with:
+          use-cross: ${{ matrix.os != 'windows-latest' }}
+          command: build
+          args: --release --locked --verbose --target ${{ matrix.target }}
       - name: Upload asset
         uses: actions/upload-release-asset@v1.0.2
         env:
